objects/ACCObj123__c.object
<CustomObject>
    <fields>
        <fullName>Pfield1__c</fullName>
        <label>Pfield1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PickListTest1__c</fullName>
        <description>Test Comment for this</description>
        <label>PickListTest1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PickListTest2__c</fullName>
        <description>Test2</description>
        <label>PickListTest2</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFeled1__c</fullName>
        <label>SFeled1</label>
        <type>Phone</type>
    </fields>
    <label>ACCObj1234</label>
    <nameField>
        <label>ACCObj123 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccObjs1234s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>